Added Middleware, API Dcoumantation...

--- a/BankingAPIProject/src/BankingAPI/Dockerfile
+++ b/BankingAPIProject/src/BankingAPI/Dockerfile
@@ -1,22 +1,28 @@
-# Base Image oluşturuluyor
+#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
+ 
 WORKDIR /app
 EXPOSE 8080
 
-# Uygulama Derleme (Build) Aşaması
+RUN addgroup --system postgres
+RUN adduser --system postgres --ingroup postgres
+
+USER postgres:postgres
+
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["BankingAPI.csproj", "./"]
 RUN dotnet restore "BankingAPI.csproj"
 COPY . .
 WORKDIR "/src/."
-RUN dotnet build "BankingAPI.csproj" -c Release -o /app/build
+RUN dotnet build "./BankingAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# Uygulama Yayınlama (Publish) Aşaması
 FROM build AS publish
-RUN dotnet publish "BankingAPI.csproj" -c Release -o /app/publish
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./BankingAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# Son (Final) Aşama
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
