Updated docker docker-compose.yml

--- a/BankingAPIProject/src/BankingAPI/BankingAPI.csproj
+++ b/BankingAPIProject/src/BankingAPI/BankingAPI.csproj
@@ -5,6 +5,9 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>d325aa25-7936-45ef-bda0-309cac594f3a</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
