--- a/BankingAPIProject/src/BankingAPI/Dockerfile
+++ b/BankingAPIProject/src/BankingAPI/Dockerfile
@@ -1,27 +1,25 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
+#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
+#For more information, please see https://aka.ms/containercompat
+
 FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS base
- 
 WORKDIR /app
-EXPOSE 8080
-
-RUN addgroup --system postgres
-RUN adduser --system postgres --ingroup postgres
-
-USER postgres:postgres
+EXPOSE 80
+EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["BankingAPI.csproj", "./"]
-RUN dotnet restore "BankingAPI.csproj"
+COPY ["src/BankingAPI/BankingAPI.csproj", "src/BankingAPI/"]
+RUN dotnet restore "./src/BankingAPI/./BankingAPI.csproj"
 COPY . .
-WORKDIR "/src/."
-RUN dotnet build "./BankingAPI.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/src/BankingAPI"
+RUN dotnet build "./BankingAPI.csproj" -c %BUILD_CONFIGURATION% -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./BankingAPI.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./BankingAPI.csproj" -c %BUILD_CONFIGURATION% -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
